modal in process

--- a/ui,ux/index.html
+++ b/ui,ux/index.html
@@ -1,69 +1,27 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Modal Project</title>
-  </head>
-  <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
-    body {
-      height: 100vh;
-      width: 100vw;
-      background-image: linear-gradient(rgb(0, 229, 237), rgb(0, 225, 116));
-    }
-    .main {
-      display: flex;
-      justify-content: space-around;
-      margin-top: 20px;
-    }
-    .btnn button {
-      padding: 20px;
-      border-radius: 40px 80px;
-      text-align: center;
-    }
-    .text {
-      padding: 40px;
-      text-align: justify;
-      height: 50vh;
-      width: 50vw;
-      background-color: white;
-      margin: 50px auto;
-      border-radius: 60px  60px    5px 60px ;
-      padding-top: 40px;
-      z-index: 3;
-      position: relative;
-    }
-    .overlay{
-        background-color: black;
-        height: 100vh;
-        width: 100vw;
-        position: absolute;
-        top: 0;left: 0;
-        bottom: 0;
-        right: 0;
-        opacity: 0.8;
-    }
-  </style>
-  <body>
-    <div class="main">
-      <div class="btnn"><button>Click 1</button></div>
-      <div class="btnn"><button>Click 2</button></div>
-      <div class="btnn"><button>Click 3</button></div>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=
+    , initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title>Modal Opener</title>
+</head>
+<body>
+    <div class="myMain">
+        <button class="modalButton">Show Modal 1</button>
+        <button class="modalButton">Show Modal 2</button>
+        <button class="modalButton">Show Modal 3</button>
     </div>
-    <div class="text">
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum nisi sunt
-      error iste saepe nemo laudantium aspernatur nihil amet, asperiores fuga,
-      eum incidunt beatae possimus illo eligendi? Est, nostrum. Nulla.
+    <div class="modal hidden">
+        <button class="close">&times</button>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Excepturi delectus facilis veniam magnam voluptas laudantium illo quos vero iure neque, eos voluptate pariatur nemo itaque culpa, illum eaque officiis ullam?</p>
     </div>
-    <div class="overlay"></div>
-    <script>
+    <div class="overlay hidden"></div>
 
-    </script>
-  </body>
-</html>
+
+
+    <script src="app.js"></script>
+</body>
+</html> -->
