--- a/ui,ux/index.htmlo.html
+++ b/ui,ux/index.htmlo.html
@@ -9,12 +9,12 @@
 </head>
 <body>
     <div class="maincontainer">
-        <button class="mc" id="modalshow1">Modal show 1</button>
-        <button class="mc" onclick="modalshow2">Modal show 2</button>
-        <button class="mc" onclick="modalshow3">Modal show 3</button>
+        <button class="mc" id="modalbtn1">Modal show 1</button>
+        <button class="mc"  id="modalbtn2">Modal show 2</button>
+        <buton class="mc"  id=" modalbtn3" >Modal show 3</button>
     </div>
-    <div class="modal_container active">
-        <div class="hiddensec" id="para">
+    <div class="active" id="cover"  >
+         <div class="hiddensec" id="para">
             <button class="hidden_button">&times;</button>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Excepturi delectus facilis veniam magnam voluptas laudantium illo quos vero iure neque, eos voluptate pariatur nemo itaque culpa, illum eaque officiis ullam?</p>
         </div>
@@ -26,6 +26,6 @@
 
 
 
-    <script src="main.mob"></script>
+    <script src="main.js"></script>
 </body>
 </html>
