--- a/ui,ux/index.html
+++ b/ui,ux/index.html
@@ -11,11 +11,11 @@
     <div class="maincontainer">
         <button class="mc" id="modalbtn1">Modal show 1</button>
         <button class="mc"  id="modalbtn2">Modal show 2</button>
-        <buton class="mc"  id=" modalbtn3" >Modal show 3</button>
+        <buton class="mc"  id="modalbtn3" >Modal show 3</button>
     </div>
     <div class="active" id="cover"  >
          <div class="hiddensec" id="para">
-            <button class="hidden_button">&times;</button>
+            <button class="hidden_button" id="close_btn">&times;</button>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Excepturi delectus facilis veniam magnam voluptas laudantium illo quos vero iure neque, eos voluptate pariatur nemo itaque culpa, illum eaque officiis ullam?</p>
         </div>
     
